--- a/Public/Core/Custom/settings.json
+++ b/Public/Core/Custom/settings.json
@@ -1,5 +1,7 @@
 {
     "name": "Custom",
+    "description": "DNS Blocklist of Custom Entries.",
+    "homepage": "https://github.com/theperfectwill/dns-blocklists",
     "sources": [
         {
             "name": "Base",
