--- a/Public/Sin/settings.json
+++ b/Public/Sin/settings.json
@@ -1,5 +1,5 @@
 {
-    "name": "RegexDNSF: Privacy",
+    "name": "RegexDNSF: Sin",
     "homepage": "https://github.com/theperfectwill/dns-regex-filters",
     "sources": [
         {
